# python-test

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  local.env  manage.py  pyproject.toml  requirements.txt  users.json
apps/categories/: models.py  serializers.py  urls.py  views.py
apps/categories/fixtures/: initial_data.json
apps/categories/migrations/: 0001_initial.py
apps/categories/tests/: test_api.py  test_models.py
apps/discounts/: models.py  serializers.py  services.py  urls.py  views.py
apps/orders/: filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/products/: filters.py  models.py  serializers.py  views.py
apps/users/: models.py  permissions.py  serializers.py  urls.py  views.py
clicksign_store/: asgi.py  settings.py  urls.py  wsgi.py
core/: jwt.py  settings.py  urls.py
orders/: models.py  permissions.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
tests/: conftest.py
tests/test_orders/: factories.py  test_models.py  test_serializers.py  test_urls.py  test_views.py
tests/test_products/: factories.py  test_models.py  test_serializers.py  test_urls.py  test_views.py
tests/test_users/: factories.py  test_serializers.py  test_views.py
users/: models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py
utils/: custom_exception_handler.py
(+16 files in other folders)
